added color themes

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
   @apply h-5 w-5 rounded-full bg-primary-dark absolute left-0 top-0 transform scale-90 transition duration-200;
 }
 #switch-button:checked::after {
-  @apply transform scale-110 translate-x-6 bg-on-primary-dark;
+  @apply transform scale-110 translate-x-6 bg-primary-on;
 }
 
 .height {
